--- a/configurations/experiment/video_generation.yaml
+++ b/configurations/experiment/video_generation.yaml
@@ -28,8 +28,8 @@ training:
 
 validation:
   batch_size: 128
-  val_every_n_step: 1.0
-  val_every_n_epoch: 1
+  val_every_n_step: 2000 #1.0
+  val_every_n_epoch: null
   limit_batch: 1.0
   data:
     num_workers: 1
